attached_assets/Pasted-PS-C-Projects-JitsPlannerPro-PS-C-Projects-JitsPlannerPro-Write-Host-Created-sessionProvider-t-1760315874079_1760315874080.txt
PS C:\Projects\JitsPlannerPro>
PS C:\Projects\JitsPlannerPro> Write-Host "Created sessionProvider.ts"
Created sessionProvider.ts
PS C:\Projects\JitsPlannerPro>
PS C:\Projects\JitsPlannerPro> # Now build
PS C:\Projects\JitsPlannerPro> npm run build

> rest-express@1.0.0 build
> vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist

vite v5.4.19 building for production...
transforming (3) src\main.tsxBrowserslist: browsers data (caniuse-lite) is 12 months old. Please run:
  npx update-browserslist-db@latest
  Why you should do it regularly: https://github.com/browserslist/update-db#readme
✓ 2753 modules transformed.
../dist/public/index.html                   3.12 kB │ gzip:   1.09 kB
../dist/public/assets/index-CrB2W0cV.css   84.42 kB │ gzip:  14.02 kB
../dist/public/assets/index-CQcWAiXd.js   800.07 kB │ gzip: 228.59 kB

(!) Some chunks are larger than 500 kB after minification. Consider:
- Using dynamic import() to code-split the application
- Use build.rollupOptions.output.manualChunks to improve chunking: https://rollupjs.org/configuration-options/#output-manualchunks
- Adjust chunk size limit for this warning via build.chunkSizeWarningLimit.
✓ built in 8.81s

  dist\index.js  99.1kb

⚡ Done in 104ms
PS C:\Projects\JitsPlannerPro> cd C:\Projects\JitsPlannerPro
PS C:\Projects\JitsPlannerPro>
PS C:\Projects\JitsPlannerPro> # Sync to Android
PS C:\Projects\JitsPlannerPro> npx cap sync android
\ Copying web assets from public to android\app\src\main\assets\| Copying web assets from public to android\app\src\main\assets\√ Copying web assets from public to android\app\src\main\assets\public in 58.38ms
√ Creating capacitor.config.json in android\app\src\main\assets in 3.66ms
√ copy android in 183.78ms
√ Updating Android plugins in 32.85ms
[info] Found 3 Capacitor plugins for android:
       @capacitor/app@7.1.0
       @capacitor/http@0.0.2
       @capacitor/preferences@7.0.2
/ update android [warn] @capacitor/http@0.0.2 doesn't officially support Capacitor ^7.0.0 yet,
       doing our best moving it's package to build.gradle so it builds
√ update android in 279.20ms
[info] Sync finished in 0.629s
PS C:\Projects\JitsPlannerPro>
PS C:\Projects\JitsPlannerPro> # Build AAB
PS C:\Projects\JitsPlannerPro> cd android
PS C:\Projects\JitsPlannerPro\android> .\gradlew.bat clean bundleRelease

> Configure project :app
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Configure project :capacitor-cordova-android-plugins
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Task :capacitor-android:compileReleaseJavaWithJavac
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.

> Task :capacitor-http:compileReleaseJavaWithJavac FAILED
C:\Projects\JitsPlannerPro\node_modules\@capacitor\http\android\src\main\java\com\getcapacitor\plugin\http\Http.java:13: error: cannot find symbol
import com.getcapacitor.PluginRequestCodes;
                       ^
  symbol:   class PluginRequestCodes
  location: package com.getcapacitor
C:\Projects\JitsPlannerPro\node_modules\@capacitor\http\android\src\main\java\com\getcapacitor\plugin\http\Http.java:217: error: cannot find symbol
        savedCall.error("User denied write permission needed to save files");
                 ^
  symbol:   method error(String)
  location: variable savedCall of type PluginCall
Note: C:\Projects\JitsPlannerPro\node_modules\@capacitor\http\android\src\main\java\com\getcapacitor\plugin\http\Http.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

[Incubating] Problems report is available at: file:///C:/Projects/JitsPlannerPro/android/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':capacitor-http:compileReleaseJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Projects\JitsPlannerPro\node_modules\@capacitor\http\android\src\main\java\com\getcapacitor\plugin\http\Http.java:13: error: cannot find symbol
  import com.getcapacitor.PluginRequestCodes;
                         ^
    symbol:   class PluginRequestCodes
    location: package com.getcapacitor
  C:\Projects\JitsPlannerPro\node_modules\@capacitor\http\android\src\main\java\com\getcapacitor\plugin\http\Http.java:217: error: cannot find symbol
          savedCall.error("User denied write permission needed to save files");
                   ^
    symbol:   method error(String)
    location: variable savedCall of type PluginCall
  Note: C:\Projects\JitsPlannerPro\node_modules\@capacitor\http\android\src\main\java\com\getcapacitor\plugin\http\Http.java uses or overrides a deprecated API.
  Note: Recompile with -Xlint:deprecation for details.
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.13/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 9s
95 actionable tasks: 88 executed, 7 up-to-date
PS C:\Projects\JitsPlannerPro\android> cd ..
PS C:\Projects\JitsPlannerPro>
PS C:\Projects\JitsPlannerPro> Write-Host "`n✅ VERSION 27 COMPLETE - THE REAL FIX!"

✅ VERSION 27 COMPLETE - THE REAL FIX!
PS C:\Projects\JitsPlannerPro> Write-Host "Upload: android\app\build\outputs\bundle\release\app-release.aab"
Upload: android\app\build\outputs\bundle\release\app-release.aab
PS C:\Projects\JitsPlannerPro> Write-Host "`nThis version uses in-memory session provider (NO localStorage)"

This version uses in-memory session provider (NO localStorage)
PS C:\Projects\JitsPlannerPro> Write-Host "Supabase session loads BEFORE any API calls - fixing the race condition"